--- a/nuxeo-features/nuxeo-elasticsearch/nuxeo-elasticsearch-core/pom.xml
+++ b/nuxeo-features/nuxeo-elasticsearch/nuxeo-elasticsearch-core/pom.xml
@@ -93,7 +93,22 @@
     </dependency>
     <dependency>
       <groupId>org.nuxeo.ecm.platform</groupId>
-      <artifactId>nuxeo-platform-tag-api</artifactId>
+      <artifactId>nuxeo-platform-tag-api</artifactId> 
+      <scope>test</scope>
+   </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-tag-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-url-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.nuxeo.ecm.platform</groupId>
+      <artifactId>nuxeo-platform-types-core</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
